@@ -1,11 +1,13 @@
 plugins {
     id "application"
     id "java"
-    id 'org.jetbrains.kotlin.jvm' version '1.3.31'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.31'
-    id 'org.jetbrains.dokka' version '0.9.17'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.50'
+    id 'org.jetbrains.dokka' version '0.9.18'
+    id 'com.github.spotbugs' version '1.6.6'
     id "signing"
     id "eclipse"
+    id "checkstyle"
     id "maven-publish"
     id "idea"
     id "jacoco"
@@ -30,12 +32,69 @@ jacoco {
     toolVersion = "0.8.2"
 }
 
-mainClassName = "com.openlattice.shuttle.ShuttleKt"
-applicationDefaultJvmArgs = ["-Xmx1G", "-Xms1G", "-server"]
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+checkstyle {
+    toolVersion = '7.4'
+}
+
+tasks.withType(Checkstyle) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
+    }
+}
+
+spotbugs {
+    toolVersion = '3.1.9'
+}
+
+tasks.withType(com.github.spotbugs.SpotBugsTask) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
+    }
+}
+
+mainClassName = "com.openlattice.shuttle.ShuttleCliKt"
 
 def S_ARGS = "$System.env.SHUTTLE_ARGS"
+def S_XMS = "$System.env.SHUTTLE_XMS"
+def S_XMX = "$System.env.SHUTTLE_XMX"
+def PARALLEL = "$System.env.PARALLELISM"
+def GC = "$System.env.GC"
+
+if (S_XMS == 'null' || S_XMS == null || S_XMS == "") {
+    S_XMS = '-Xms1g'
+}
+
+if (S_XMX == 'null' || S_XMX == null || S_XMX == "") {
+    S_XMX = '-Xms4g'
+}
+
+if (S_ARGS == 'null' || S_ARGS == null || S_ARGS == "") {
+    S_ARGS = 'local postgres medialocal auditlocal'
+}
+
+
+if (PARALLEL == 'null' || PARALLEL == null || PARALLEL == "") {
+    PARALLEL = "-Djava.util.concurrent.ForkJoinPool.common.parallelism=" + Runtime.runtime.availableProcessors()
+}
+
+if (GC == 'null' || GC == null || GC == "") {
+    GC = "-XX:+UseG1GC"
+}
+
+println "Using java args for running ${projectName}: Xms=" + S_XMS + ",Xmx=" + S_XMX + " -server"
+
+applicationDefaultJvmArgs = ["-Xmx1G", "-Xms1G", "-server"]
+applicationDefaultJvmArgs += ["--add-modules", "java.se",
+                              "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
+                              "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                              "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+                              "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+                              "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+                              "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 run {
     if (S_ARGS != null) {
@@ -49,6 +108,10 @@ run {
 
 }
 
+println "Enabled profiles: " + Arrays.toString(run.args)
+
+
+
 def versions = [
         checkstyle: '7.4',
 ]
@@ -56,6 +119,9 @@ def versions = [
 
 configurations {
     provided
+    compile {
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    }
 }
 
 sourceSets {
@@ -74,11 +140,16 @@ jar {
 }
 
 dependencies {
+    spotbugsPlugins "com.h3xstream.findsecbugs:findsecbugs-plugin:${findsecbugs_version}"
+    compileOnly "net.jcip:jcip-annotations:${jcip_version}"
+    compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
+    testCompileOnly "net.jcip:jcip-annotations:${jcip_version}"
+    testCompileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
 
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:${jackson_version}"
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${jackson_version}"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    
+
     compile "commons-cli:commons-cli:$commons_cli_version"
     compile "javax.xml.bind:jaxb-api:$jaxb_api_version"
     compile "com.sun.xml.bind:jaxb-core:$jaxb_core_version"
@@ -92,8 +163,9 @@ dependencies {
 
     if (project.hasProperty('developmentMode') && project.developmentMode) {
         logger.quiet(project.name + " using project dependencies.")
-        compile project(":rhizome")
         compile project(":api")
+        compile project(":rhizome")
+        compile project(":conductor-client")
 
         testCompile(project(path: ":api", configuration: "tests"))
         testCompile(project(path: ":rhizome", configuration: "tests"))
@@ -101,6 +173,7 @@ dependencies {
     } else {
         logger.quiet(project.name + " using jar dependencies.")
         compile "com.openlattice:rhizome:${rhizome_version}"
+        compile "com.openlattice:conductor-client:${conductor_client_version}"
         compile "com.openlattice:api:${api_version}"
 
         testCompile "com.openlattice:api:${api_version}:tests"
@@ -124,6 +197,27 @@ dependencies {
 startScripts {
     classpath = files(jar.archivePath)
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["--add-modules", "java.se",
+                             "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
+                             "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                             "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+                             "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+                             "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+                             "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
+tasks.withType(Test) {
+    jvmArgs += ["--add-modules", "java.se",
+                "--add-exports", "java.base/jdk.internal.ref=ALL-UNNAMED",
+                "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+                "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+                "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+                "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
 
 eclipse {
     ext.downloadSources = true
